--- a/templates/doctor/dashboard.html
+++ b/templates/doctor/dashboard.html
@@ -42,7 +42,7 @@
             </div>
             <div class="bg-gray-50 dark:bg-gray-700 px-5 py-3">
                 <div class="text-sm">
-                    <a href="{{ url_for('patient_doctors') }}" class="font-medium text-primary-600 hover:text-primary-900 dark:text-primary-400 dark:hover:text-primary-300">Voir mes patients</a>
+                    <a href="{{ url_for('doctor_patients') }}" class="font-medium text-primary-600 hover:text-primary-900 dark:text-primary-400 dark:hover:text-primary-300">Voir mes patients</a>
                 </div>
             </div>
         </div>
